fixed overflow header

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,5 +1,5 @@
 .header {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
@@ -58,7 +58,6 @@
     row-gap: 43px;
     max-width: 285px;
     width: 100%;
-    height: 100vh;
     margin-left: auto;
     margin-right: -15px;
     padding: 20px 15px;
@@ -86,6 +85,19 @@
   }
 }
 
+.header__wrapper--opened {
+  @include vp-767 {
+    height: 100vh;
+  }
+}
+
+.header__wrapper--closed .header__toggle,
+.header__wrapper--opened .header__toggle {
+  @include vp-767 {
+    display: block;
+  }
+}
+
 .header__toggle {
   display: none;
 
@@ -93,7 +105,6 @@
     position: absolute;
     top: 20px;
     right: 10px;
-    display: block;
     margin-left: auto;
     padding: 5px;
     background-color: transparent;
@@ -134,7 +145,10 @@
 
 .header__wrapper--opened .header__list {
   display: flex;
+  width: 100%;
   margin-left: 10px;
+  flex-wrap: nowrap;
+  overflow-x: auto;
 }
 
 .header__wrapper--closed .header__menu-opened {
