--- a/source/sass/blocks/main-screen.scss
+++ b/source/sass/blocks/main-screen.scss
@@ -1,17 +1,16 @@
 .main-screen {
-  position: static;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
-  height: auto;
-  min-height: 650px;
+  height: 650px;
 
   @include vp-1023 {
-    min-height: 638px;
+    height: 638px;
   }
 
   @include vp-374 {
-    min-height: 500px;
+    height: 500px;
   }
 }
 
@@ -21,31 +20,30 @@
   left: 0;
   display: block;
   width: 100%;
-  height: auto;
-  min-height: 650px;
+  height: 650px;
   background-color: $color-royal-blue;
   text-indent: -100vw;
 
   @include vp-1023 {
-    min-height: 638px;
+    height: 638px;
   }
 
   @include vp-374 {
-    min-height: 500px;
+    height: 500px;
   }
 }
 
 .main-screen__bg img {
   width: 100%;
-  min-height: 650px;
+  height: 650px;
   object-fit: cover;
 
   @include vp-1023 {
-    min-height: 638px;
+    height: 638px;
   }
 
   @include vp-374 {
-    min-height: 500px;
+    height: 500px;
   }
 }
 
